brat/test/golden/error/vectorise3.brat.golden
Error in test/golden/error/vectorise3.brat on line 2:
f(_, _, n, f, xs) = (n of f)(xs)
                    ^^^^^^^^^^^^

  Type error: Expected function 「n」 of f() to consume all of its arguments (「xs」)
 but found leftovers: (b1 :: Vec(VApp VPar Ex checking_check_defs_1_f_lambda_fake_source_3 0 B0, VPar Ex checking_check_defs_1_f_lambda_fake_source_3 2))

